[package]
name = "la_bruteforce"
version = "6.6.6"
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
edition = "2018"

[dependencies]
snafu = "0.5.0"
midir = "0.5"
structopt = "0.3"
strum = "0.15"
strum_macros = "0.15"
lazy_static = "1.4"
linked-hash-map = "0.5"
hex = "0.4"
#const-concat = "0.1.0"